fix jump markers and header on panorama page

--- a/css/style_smartphone.less
+++ b/css/style_smartphone.less
@@ -34,8 +34,10 @@ body {
     -ms-touch-action: auto;
 }
 
-.main {
+#main {
     margin: auto;
+    z-index: 0;
+
 }
 
 .mnav {
